--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--prefer-binary
 anyio==4.9.0
 blinker==1.9.0
 CacheControl==0.14.3
@@ -36,7 +37,7 @@ Jinja2==3.1.6
 joblib==1.5.1
 MarkupSafe==3.0.2
 msgpack==1.1.1
-numpy==2.0.2
+numpy==1.24.4
 pandas==2.3.0
 proto-plus==1.26.1
 protobuf==6.31.1
@@ -50,7 +51,7 @@ pytz==2025.2
 requests==2.32.4
 rsa==4.9.1
 scikit-learn==1.6.1
-scipy==1.13.1
+scipy==1.10.1
 six==1.17.0
 sniffio==1.3.1
 threadpoolctl==3.6.0
